--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
+    "bull-arena": "^4.5.1",
     "bullmq": "^5.53.1",
     "kindoo-back": "file:",
     "reflect-metadata": "^0.2.2",
