--- a/package.json
+++ b/package.json
@@ -20,12 +20,16 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@apollo/server": "^4.12.1",
+    "@nestjs/apollo": "^13.1.0",
     "@nestjs/bullmq": "^11.0.2",
     "@nestjs/common": "^11.0.1",
     "@nestjs/core": "^11.0.1",
+    "@nestjs/graphql": "^13.1.0",
     "@nestjs/platform-express": "^11.0.1",
     "bull-arena": "^4.5.1",
     "bullmq": "^5.53.1",
+    "graphql": "^16.11.0",
     "kindoo-back": "file:",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
