--- a/package.json
+++ b/package.json
@@ -27,9 +27,11 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/graphql": "^13.1.0",
     "@nestjs/platform-express": "^11.0.1",
+    "apollo-server-express": "^3.13.0",
     "bull-arena": "^4.5.1",
     "bullmq": "^5.53.1",
     "graphql": "^16.11.0",
+    "graphql-tools": "^9.0.18",
     "kindoo-back": "file:",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1"
