--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -15,4 +15,4 @@ jobs:
         uses: docker/setup-compose-action@v1
       -
         name: Run Docker Compose
-        run: docker-compose up -d 
+        run: docker compose up -d 
