--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -2,7 +2,7 @@ name: Docker compose
 
 on:
   workflow_run:
-    workflows: [build]
+    workflows: [Build NestJS Project]
     types:
       - completed
 
