--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -13,6 +13,12 @@ jobs:
       -
         name: Set up Docker Compose
         uses: docker/setup-compose-action@v1
+
+      -
+        name: Run docker compose
+        uses: hoverkraft-tech/compose-action@v2.0.1
+        with:
+          compose-file: "./docker-compose.yml"
       -
         name: Run Docker Compose
         run: docker compose up -d 
