--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,17 +1,38 @@
 name: Docker compose
 
 on:
+  pull_request:
+    branches:
+      - main
   workflow_run:
     workflows: [Build NestJS Project]
     types:
       - completed
 
 jobs:
-  compose:
+  build-and-push:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ${{ secrets.DOCKER_REGISTRY_URL }}
+          username: ${{ secrets.DOCKER_REGISTRY_USERNAME }}
+          password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
+
+      - name: Build and push Docker image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          file: ./Dockerfile
+          push: true
+          tags: ${{ secrets.DOCKER_REGISTRY_URL }}/${{ secrets.DOCKER_REGISTRY_USERNAME }}/kindoo-back:latest
 
       - name: Set up Docker Compose
         uses: docker/setup-compose-action@v1
@@ -20,7 +41,7 @@ jobs:
         uses: hoverkraft-tech/compose-action@v2.0.1
         with:
           compose-file: ./docker-compose.yml
-          cwd: ./  # Adjust if needed, this sets the working directory
+          cwd: ./
 
       - name: Run Docker Compose manually (if needed)
         run: docker compose up -d
