--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,13 +1,13 @@
 name: Docker compose
 
 on:
-  pull_request:
+  push:
     branches:
       - main
   workflow_run:
     workflows: [Build NestJS Project]
     types:
-      - completed
+      - success
 
 jobs:
   build-and-push:
@@ -16,13 +16,10 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
 
       - name: Log in to Docker Registry
         uses: docker/login-action@v3
         with:
-          registry: ${{ secrets.DOCKER_REGISTRY_URL }}
           username: ${{ secrets.DOCKER_REGISTRY_USERNAME }}
           password: ${{ secrets.DOCKER_REGISTRY_PASSWORD }}
 
@@ -32,16 +29,6 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKER_REGISTRY_URL }}/${{ secrets.DOCKER_REGISTRY_USERNAME }}/kindoo-back:latest
+          tags: ${{ secrets.DOCKER_REGISTRY_USERNAME }}/kindoo-back:latest
 
-      - name: Set up Docker Compose
-        uses: docker/setup-compose-action@v1
 
-      - name: Run docker compose with hoverkraft
-        uses: hoverkraft-tech/compose-action@v2.0.1
-        with:
-          compose-file: ./docker-compose.yml
-          cwd: ./
-
-      - name: Run Docker Compose manually (if needed)
-        run: docker compose up -d
