--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "apollo-server-express": "^3.13.0",
     "bull-arena": "^4.5.1",
     "bullmq": "^5.53.1",
+    "express": "^4.21.2",
     "graphql": "^16.11.0",
     "graphql-tools": "^9.0.18",
     "kindoo-back": "file:",
@@ -44,7 +45,7 @@
     "@nestjs/testing": "^11.1.2",
     "@swc/cli": "^0.6.0",
     "@swc/core": "^1.10.7",
-    "@types/express": "^5.0.0",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
     "@types/supertest": "^6.0.2",
