--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
     "@nestjs/apollo": "^13.1.0",
     "@nestjs/bullmq": "^11.0.2",
     "@nestjs/common": "^11.0.1",
+    "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^11.0.1",
     "@nestjs/graphql": "^13.1.0",
+    "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^11.0.1",
     "apollo-server-express": "^3.13.0",
     "bull-arena": "^4.5.1",
