--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -34,4 +34,12 @@ jobs:
           push: true
           tags: ${{ secrets.DOCKER_REGISTRY_USERNAME }}/kindoo-back:latest
 
+      - name: Deploy to Render
+        env: 
+          deploy_url: ${{ secrets.RENDER_DEPLOY_URL }}
+        run: |
+          curl "$deploy_url"
+
+
+
 
