--- a/.env
+++ b/.env
@@ -9,3 +9,5 @@
 # one found in a remote Prisma Postgres URL, does not contain any sensitive information.
 
 DATABASE_URL="postgresql://kindoo_db_user:wB6yaVI25SBWRTxHnVjBvKIPnmVzszEp@dpg-d1023mqli9vc73dd8h20-a.frankfurt-postgres.render.com/kindoo_db"
+REDIS_HOST=redis
+REDIS_PORT=6379
