--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -34,6 +34,7 @@ services:
     command: ["node", "dist/src/bullMQ/queue.consumer.js"]
     environment:
       - REDIS_HOST=redis
+      - REDIS_PORT=6379
 
 networks:
   app-network:
