--- a/.env
+++ b/.env
@@ -9,5 +9,13 @@
 # one found in a remote Prisma Postgres URL, does not contain any sensitive information.
 
 DATABASE_URL="postgresql://kindoo_db_user:wB6yaVI25SBWRTxHnVjBvKIPnmVzszEp@dpg-d1023mqli9vc73dd8h20-a.frankfurt-postgres.render.com/kindoo_db"
-REDIS_HOST=red-d1656lqli9vc73a1sh9g
+REDIS_HOST=oregon-keyvalue.render.com
 REDIS_PORT=6379
+REDIS_USERNAME=red-d1656lqli9vc73a1sh9g
+REDIS_PASSWORD=vqwT2lMAEstwX60srEJZ9c2I6Neeriky
+REDIS_TLS=true
+# REDIS_HOST=frankfurt-keyvalue.render.com
+# REDIS_PORT=6379
+
+
+# rediss://red-d16tssfdiees73djk6o0:RxY2TCKMTq6Qu5Q32L3kgcNi97HTDRDy@frankfurt-keyvalue.render.com:6379 frankfurt-keyvalue.render.com
