--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "@apollo/server": "^4.12.1",
     "@nestjs/apollo": "^13.1.0",
+    "@nestjs/bull": "^11.0.2",
     "@nestjs/bullmq": "^11.0.2",
     "@nestjs/common": "^11.0.1",
     "@nestjs/config": "^4.0.2",
@@ -29,17 +30,22 @@
     "@nestjs/graphql": "^13.1.0",
     "@nestjs/jwt": "^11.0.0",
     "@nestjs/platform-express": "^11.0.1",
+    "@nestjs/platform-socket.io": "^11.1.3",
+    "@nestjs/websockets": "^11.1.3",
     "@prisma/client": "^6.9.0",
     "apollo-server-express": "^3.13.0",
     "bcrypt": "^6.0.0",
+    "bull": "^4.16.5",
     "bull-arena": "^4.5.1",
-    "bullmq": "^5.53.1",
+    "bullmq": "^5.53.3",
     "express": "^4.21.2",
     "graphql": "^16.11.0",
     "graphql-tools": "^9.0.18",
     "kindoo-back": "file:",
     "reflect-metadata": "^0.2.2",
-    "rxjs": "^7.8.1"
+    "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
@@ -53,6 +59,7 @@
     "@types/express": "^4.17.21",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.10.7",
+    "@types/socket.io-client": "^1.4.36",
     "@types/supertest": "^6.0.2",
     "eslint": "^9.18.0",
     "eslint-config-prettier": "^10.0.1",
