--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -28,8 +28,8 @@ jobs:
 
       - name: Run Postman tests against Render
         run: |
-          newman run test/kindoo.postman_collection.json \
-            -e test/kindoo-env.postman_environment.json \
+          newman run src/test/kindoo.postman_collection.json \
+            -e src/test/kindoo-env.postman_environment.json \
             --reporters cli,html \
             --reporter-html-export newman-report.html
 
